# Spottie

./: .gitignore  README.md  Spottie.entitlements
PlayerCore/: Cargo.toml
PlayerCore/src/: api.rs  config.rs  event.rs  lib.rs  queue.rs  sink_wrapper.rs  spotify.rs
Scripts/: build_player_core.sh
Spottie/: ContentView.swift  Spottie-Bridging-Header.h  SpottieApp.swift
Spottie.xcodeproj/: project.pbxproj
Spottie/Backend/: EventBroker.swift  HTTPClient.swift  SpotifyAPI.swift  SpotifyWebAPI.swift  WebsocketClient.swift
Spottie/Backend/CURL/: CurlClient.swift  spottie_curl.c  spottie_curl.h
Spottie/Backend/Types/: Nothing.swift  SpotifyEvent.swift  SpottieError.swift
Spottie/Commands/: PlayerCommands.swift
Spottie/Persistence/: DBService.swift
Spottie/PlayerCore/: PlayerCore.swift  PlayerCoreState.swift  player_core.h
Spottie/Utilities/: DependencyInjector.swift  DurationFormatter.swift
Spottie/ViewModels/: FakePlayerViewModel.swift  PlayerStateProtocol.swift  PlayerViewModel.swift
Spottie/Views/: BottomBar.swift  ContentView.swift  Home.swift  Library.swift  LikedSongs.swift  PlaylistDetail.swift  Search.swift  Sidebar.swift
Spottie/Views/BottomBar/: BottomBar.swift  NowPlaying.swift  PlayerControls.swift  PreviousTrackButton.swift  ShuffleButton.swift  TrackProgressSlider.swift  VolumeSlider.swift
Spottie/Views/Carousel/: CarouselRow.swift  CarouselRowItem.swift
Spottie/Views/Components/: CarouselRow.swift  CarouselRowItem.swift  GreenPlayButton.swift  HoverState.swift  NextTrackButton.swift  NowPlaying.swift  PlayPauseButton.swift  (+9 more)
(+48 files in other folders)
