[package]
name = "spottie-player-core"
version = "0.1.0"
authors = ["Lee Jun Kit <mohawk.riceball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
warp = "0.3"
librespot = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures = "0.3"
bytes = "1"